parser/dcpu_parser.go
// Code generated from parser/DCPU.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // DCPU
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type DCPUParser struct {
	*antlr.BaseParser
}

var DCPUParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func dcpuParserInit() {
	staticData := &DCPUParserStaticData
	staticData.LiteralNames = []string{
		"", "':'", "'.dat'", "'.DAT'", "'dat'", "'DAT'", "','", "'['", "']'",
		"'+'",
	}
	staticData.SymbolicNames = []string{
		"", "", "", "", "", "", "", "", "", "", "SET", "ADD", "SUB", "MUL",
		"MLI", "DIV", "DVI", "MOD", "MDI", "AND", "BOR", "XOR", "SHR", "ASR",
		"SHL", "IFB", "IFC", "IFE", "IFN", "IFG", "IFA", "IFL", "IFU", "ADX",
		"SBX", "STI", "STD", "POP", "PUSH", "PEEK", "PICK", "STACK_POINTER",
		"PROGRAM_COUNTER", "EXTRA", "NUMBER", "REGISTER", "JSR", "INT", "IAG",
		"IAS", "RFI", "IAQ", "HWN", "HWQ", "HWI", "ALT", "DUM", "COMMENT", "IDENTIFIER",
		"STRING", "WHITESPACE",
	}
	staticData.RuleNames = []string{
		"program", "labelDefinition", "label", "instruction", "dataSection",
		"data", "datum", "binaryOperation", "binaryOpcode", "argumentA", "location",
		"argumentB", "register", "pick", "unaryOperation", "locationInRegister",
		"locationOffsetByRegister", "value", "unaryOpcode", "debugOperation",
		"debugOpcode",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// DCPUParserInit initializes any static state used to implement DCPUParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewDCPUParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func DCPUParserInit() {
	staticData := &DCPUParserStaticData
	staticData.once.Do(dcpuParserInit)
}

// NewDCPUParser produces a new parser instance for the optional input antlr.TokenStream.
func NewDCPUParser(input antlr.TokenStream) *DCPUParser {
	DCPUParserInit()
	this := new(DCPUParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &DCPUParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "DCPU.g4"

	return this
}

// DCPUParser tokens.
const (
	DCPUParserEOF             = antlr.TokenEOF
	DCPUParserT__0            = 1
	DCPUParserT__1            = 2
	DCPUParserT__2            = 3
	DCPUParserT__3            = 4
	DCPUParserT__4            = 5
	DCPUParserT__5            = 6
	DCPUParserT__6            = 7
	DCPUParserT__7            = 8
	DCPUParserT__8            = 9
	DCPUParserSET             = 10
	DCPUParserADD             = 11
	DCPUParserSUB             = 12
	DCPUParserMUL             = 13
	DCPUParserMLI             = 14
	DCPUParserDIV             = 15
	DCPUParserDVI             = 16
	DCPUParserMOD             = 17
	DCPUParserMDI             = 18
	DCPUParserAND             = 19
	DCPUParserBOR             = 20
	DCPUParserXOR             = 21
	DCPUParserSHR             = 22
	DCPUParserASR             = 23
	DCPUParserSHL             = 24
	DCPUParserIFB             = 25
	DCPUParserIFC             = 26
	DCPUParserIFE             = 27
	DCPUParserIFN             = 28
	DCPUParserIFG             = 29
	DCPUParserIFA             = 30
	DCPUParserIFL             = 31
	DCPUParserIFU             = 32
	DCPUParserADX             = 33
	DCPUParserSBX             = 34
	DCPUParserSTI             = 35
	DCPUParserSTD             = 36
	DCPUParserPOP             = 37
	DCPUParserPUSH            = 38
	DCPUParserPEEK            = 39
	DCPUParserPICK            = 40
	DCPUParserSTACK_POINTER   = 41
	DCPUParserPROGRAM_COUNTER = 42
	DCPUParserEXTRA           = 43
	DCPUParserNUMBER          = 44
	DCPUParserREGISTER        = 45
	DCPUParserJSR             = 46
	DCPUParserINT             = 47
	DCPUParserIAG             = 48
	DCPUParserIAS             = 49
	DCPUParserRFI             = 50
	DCPUParserIAQ             = 51
	DCPUParserHWN             = 52
	DCPUParserHWQ             = 53
	DCPUParserHWI             = 54
	DCPUParserALT             = 55
	DCPUParserDUM             = 56
	DCPUParserCOMMENT         = 57
	DCPUParserIDENTIFIER      = 58
	DCPUParserSTRING          = 59
	DCPUParserWHITESPACE      = 60
)

// DCPUParser rules.
const (
	DCPUParserRULE_program                  = 0
	DCPUParserRULE_labelDefinition          = 1
	DCPUParserRULE_label                    = 2
	DCPUParserRULE_instruction              = 3
	DCPUParserRULE_dataSection              = 4
	DCPUParserRULE_data                     = 5
	DCPUParserRULE_datum                    = 6
	DCPUParserRULE_binaryOperation          = 7
	DCPUParserRULE_binaryOpcode             = 8
	DCPUParserRULE_argumentA                = 9
	DCPUParserRULE_location                 = 10
	DCPUParserRULE_argumentB                = 11
	DCPUParserRULE_register                 = 12
	DCPUParserRULE_pick                     = 13
	DCPUParserRULE_unaryOperation           = 14
	DCPUParserRULE_locationInRegister       = 15
	DCPUParserRULE_locationOffsetByRegister = 16
	DCPUParserRULE_value                    = 17
	DCPUParserRULE_unaryOpcode              = 18
	DCPUParserRULE_debugOperation           = 19
	DCPUParserRULE_debugOpcode              = 20
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllLabelDefinition() []ILabelDefinitionContext
	LabelDefinition(i int) ILabelDefinitionContext
	AllInstruction() []IInstructionContext
	Instruction(i int) IInstructionContext
	AllDataSection() []IDataSectionContext
	DataSection(i int) IDataSectionContext

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DCPUParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DCPUParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = DCPUParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(DCPUParserEOF, 0)
}

func (s *ProgramContext) AllLabelDefinition() []ILabelDefinitionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ILabelDefinitionContext); ok {
			len++
		}
	}

	tst := make([]ILabelDefinitionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ILabelDefinitionContext); ok {
			tst[i] = t.(ILabelDefinitionContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) LabelDefinition(i int) ILabelDefinitionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILabelDefinitionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILabelDefinitionContext)
}

func (s *ProgramContext) AllInstruction() []IInstructionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IInstructionContext); ok {
			len++
		}
	}

	tst := make([]IInstructionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IInstructionContext); ok {
			tst[i] = t.(IInstructionContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) Instruction(i int) IInstructionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IInstructionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IInstructionContext)
}

func (s *ProgramContext) AllDataSection() []IDataSectionContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IDataSectionContext); ok {
			len++
		}
	}

	tst := make([]IDataSectionContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IDataSectionContext); ok {
			tst[i] = t.(IDataSectionContext)
			i++
		}
	}

	return tst
}

func (s *ProgramContext) DataSection(i int) IDataSectionContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDataSectionContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDataSectionContext)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DCPUListener); ok {
		listenerT.EnterProgram(s)
	}
}

func (s *ProgramContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DCPUListener); ok {
		listenerT.ExitProgram(s)
	}
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case DCPUVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *DCPUParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, DCPUParserRULE_program)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(45)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = ((int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&144044956770630718) != 0) {
		p.SetState(45)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetTokenStream().LA(1) {
		case DCPUParserT__0:
			{
				p.SetState(42)
				p.LabelDefinition()
			}

		case DCPUParserSET, DCPUParserADD, DCPUParserSUB, DCPUParserMUL, DCPUParserMLI, DCPUParserDIV, DCPUParserDVI, DCPUParserMOD, DCPUParserMDI, DCPUParserAND, DCPUParserBOR, DCPUParserXOR, DCPUParserSHR, DCPUParserASR, DCPUParserSHL, DCPUParserIFB, DCPUParserIFC, DCPUParserIFE, DCPUParserIFN, DCPUParserIFG, DCPUParserIFA, DCPUParserIFL, DCPUParserIFU, DCPUParserADX, DCPUParserSBX, DCPUParserSTI, DCPUParserSTD, DCPUParserJSR, DCPUParserINT, DCPUParserIAG, DCPUParserIAS, DCPUParserRFI, DCPUParserIAQ, DCPUParserHWN, DCPUParserHWQ, DCPUParserHWI, DCPUParserALT, DCPUParserDUM:
			{
				p.SetState(43)
				p.Instruction()
			}

		case DCPUParserT__1, DCPUParserT__2, DCPUParserT__3, DCPUParserT__4:
			{
				p.SetState(44)
				p.DataSection()
			}

		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

		p.SetState(47)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(49)
		p.Match(DCPUParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ILabelDefinitionContext is an interface to support dynamic dispatch.
type ILabelDefinitionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	IDENTIFIER() antlr.TerminalNode

	// IsLabelDefinitionContext differentiates from other interfaces.
	IsLabelDefinitionContext()
}

type LabelDefinitionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLabelDefinitionContext() *LabelDefinitionContext {
	var p = new(LabelDefinitionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DCPUParserRULE_labelDefinition
	return p
}

func InitEmptyLabelDefinitionContext(p *LabelDefinitionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DCPUParserRULE_labelDefinition
}

func (*LabelDefinitionContext) IsLabelDefinitionContext() {}

func NewLabelDefinitionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LabelDefinitionContext {
	var p = new(LabelDefinitionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = DCPUParserRULE_labelDefinition

	return p
}

func (s *LabelDefinitionContext) GetParser() antlr.Parser { return s.parser }

func (s *LabelDefinitionContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(DCPUParserIDENTIFIER, 0)
}

func (s *LabelDefinitionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LabelDefinitionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *LabelDefinitionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DCPUListener); ok {
		listenerT.EnterLabelDefinition(s)
	}
}

func (s *LabelDefinitionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DCPUListener); ok {
		listenerT.ExitLabelDefinition(s)
	}
}

func (s *LabelDefinitionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case DCPUVisitor:
		return t.VisitLabelDefinition(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *DCPUParser) LabelDefinition() (localctx ILabelDefinitionContext) {
	localctx = NewLabelDefinitionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, DCPUParserRULE_labelDefinition)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(51)
		p.Match(DCPUParserT__0)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(52)
		p.Match(DCPUParserIDENTIFIER)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ILabelContext is an interface to support dynamic dispatch.
type ILabelContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	IDENTIFIER() antlr.TerminalNode

	// IsLabelContext differentiates from other interfaces.
	IsLabelContext()
}

type LabelContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyLabelContext() *LabelContext {
	var p = new(LabelContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DCPUParserRULE_label
	return p
}

func InitEmptyLabelContext(p *LabelContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DCPUParserRULE_label
}

func (*LabelContext) IsLabelContext() {}

func NewLabelContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *LabelContext {
	var p = new(LabelContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = DCPUParserRULE_label

	return p
}

func (s *LabelContext) GetParser() antlr.Parser { return s.parser }

func (s *LabelContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(DCPUParserIDENTIFIER, 0)
}

func (s *LabelContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *LabelContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *LabelContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DCPUListener); ok {
		listenerT.EnterLabel(s)
	}
}

func (s *LabelContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DCPUListener); ok {
		listenerT.ExitLabel(s)
	}
}

func (s *LabelContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case DCPUVisitor:
		return t.VisitLabel(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *DCPUParser) Label() (localctx ILabelContext) {
	localctx = NewLabelContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, DCPUParserRULE_label)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(54)
		p.Match(DCPUParserIDENTIFIER)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IInstructionContext is an interface to support dynamic dispatch.
type IInstructionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	BinaryOperation() IBinaryOperationContext
	UnaryOperation() IUnaryOperationContext
	DebugOperation() IDebugOperationContext

	// IsInstructionContext differentiates from other interfaces.
	IsInstructionContext()
}

type InstructionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyInstructionContext() *InstructionContext {
	var p = new(InstructionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DCPUParserRULE_instruction
	return p
}

func InitEmptyInstructionContext(p *InstructionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DCPUParserRULE_instruction
}

func (*InstructionContext) IsInstructionContext() {}

func NewInstructionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *InstructionContext {
	var p = new(InstructionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = DCPUParserRULE_instruction

	return p
}

func (s *InstructionContext) GetParser() antlr.Parser { return s.parser }

func (s *InstructionContext) BinaryOperation() IBinaryOperationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBinaryOperationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBinaryOperationContext)
}

func (s *InstructionContext) UnaryOperation() IUnaryOperationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IUnaryOperationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IUnaryOperationContext)
}

func (s *InstructionContext) DebugOperation() IDebugOperationContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDebugOperationContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDebugOperationContext)
}

func (s *InstructionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *InstructionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *InstructionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DCPUListener); ok {
		listenerT.EnterInstruction(s)
	}
}

func (s *InstructionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DCPUListener); ok {
		listenerT.ExitInstruction(s)
	}
}

func (s *InstructionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case DCPUVisitor:
		return t.VisitInstruction(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *DCPUParser) Instruction() (localctx IInstructionContext) {
	localctx = NewInstructionContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, DCPUParserRULE_instruction)
	p.SetState(59)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case DCPUParserSET, DCPUParserADD, DCPUParserSUB, DCPUParserMUL, DCPUParserMLI, DCPUParserDIV, DCPUParserDVI, DCPUParserMOD, DCPUParserMDI, DCPUParserAND, DCPUParserBOR, DCPUParserXOR, DCPUParserSHR, DCPUParserASR, DCPUParserSHL, DCPUParserIFB, DCPUParserIFC, DCPUParserIFE, DCPUParserIFN, DCPUParserIFG, DCPUParserIFA, DCPUParserIFL, DCPUParserIFU, DCPUParserADX, DCPUParserSBX, DCPUParserSTI, DCPUParserSTD:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(56)
			p.BinaryOperation()
		}

	case DCPUParserJSR, DCPUParserINT, DCPUParserIAG, DCPUParserIAS, DCPUParserRFI, DCPUParserIAQ, DCPUParserHWN, DCPUParserHWQ, DCPUParserHWI:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(57)
			p.UnaryOperation()
		}

	case DCPUParserALT, DCPUParserDUM:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(58)
			p.DebugOperation()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDataSectionContext is an interface to support dynamic dispatch.
type IDataSectionContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Data() IDataContext

	// IsDataSectionContext differentiates from other interfaces.
	IsDataSectionContext()
}

type DataSectionContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDataSectionContext() *DataSectionContext {
	var p = new(DataSectionContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DCPUParserRULE_dataSection
	return p
}

func InitEmptyDataSectionContext(p *DataSectionContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = DCPUParserRULE_dataSection
}

func (*DataSectionContext) IsDataSectionContext() {}

func NewDataSectionContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DataSectionContext {
	var p = new(DataSectionContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = DCPUParserRULE_dataSection

	return p
}

func (s *DataSectionContext) GetParser() antlr.Parser { return s.parser }

func (s *DataSectionContext) Data() IDataContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDataContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDataContext)
}

func (s *DataSectionContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DataSectionContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DataSectionContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DCPUListener); ok {
		listenerT.EnterDataSection(s)
	}
}

func (s *DataSectionContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(DCPUListener); ok {
		listenerT.ExitDataSection(s)
	}
}

func (s *DataSectionContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case DCPUVisitor:
		return t.VisitDataSection(s)
